evironment variables updated

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = mongodb://admin:mpsys@localhost:27017/admin?retryWrites=true&w=majority
+DATABASE_URL = mongodb+srv://jayedumi:mpsys1835@test.4grcdq9.mongodb.net/?retryWrites=true&w=majority
