--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "type": "commonjs",
   "scripts": {
-    "start": "nodemon src/server.cjs",
+    "start": "nodemon server.cjs",
     "build": "webpack"
   },
   "devDependencies": {
